clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__assignments__parse_assignment_append.snap
---
source: clash-brush-parser/src/parser/tests/assignments.rs
assertion_line: 81
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "x+=more",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: VariableName("x"),
                    value: Scalar(Word(
                      value: "more",
                      loc: "[location]",
                    )),
                    append: true,
                    loc: "[location]",
                  ), Word(
                    value: "x+=more",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
