clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__assignments__parse_assignment_array_element.snap
---
source: clash-brush-parser/src/parser/tests/assignments.rs
assertion_line: 162
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "arr[0]=value",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: ArrayElementName("arr", "0"),
                    value: Scalar(Word(
                      value: "value",
                      loc: "[location]",
                    )),
                    loc: "[location]",
                  ), Word(
                    value: "arr[0]=value",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
