clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__assignments__parse_assignment_array_empty.snap
---
source: clash-brush-parser/src/parser/tests/assignments.rs
assertion_line: 116
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "arr=()",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: VariableName("arr"),
                    value: Array([]),
                    loc: "[location]",
                  ), Word(
                    value: "arr=()",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
