clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__assignments__parse_assignment_array_quoted_elements.snap
---
source: clash-brush-parser/src/parser/tests/assignments.rs
assertion_line: 149
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "arr=(\"hello world\" \"foo bar\")",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: VariableName("arr"),
                    value: Array([
                      (None, Word(
                        value: "\"hello world\"",
                        loc: "[location]",
                      )),
                      (None, Word(
                        value: "\"foo bar\"",
                        loc: "[location]",
                      )),
                    ]),
                    loc: "[location]",
                  ), Word(
                    value: "arr=(\"hello world\" \"foo bar\")",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
