clash-brush-parser/src/parser/tests/snapshots/clash_brush_parser__parser__tests__assignments__parse_assignment_empty.snap
---
source: clash-brush-parser/src/parser/tests/assignments.rs
assertion_line: 24
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "x=",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: VariableName("x"),
                    value: Scalar(Word(
                      value: "",
                      loc: "[location]",
                    )),
                    loc: "[location]",
                  ), Word(
                    value: "x=",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
